[package]
authors = ["Daniel Vogelbacher <daniel@chaospixel.com>", "Pedro Côrte-Real <pedro@pedrocr.net>"]
categories = ["multimedia::images"]
description = "A library to extract images and metadata from camera raw formats"
readme = "README.md"
edition = "2021"
homepage = "https://github.com/dnglab/dnglab"
keywords = ["camera", "raw"]
license = "LGPL-2.1"
name = "rawler"
repository = "https://github.com/dnglab/dnglab"
rust-version = "1.80"
version = "0.6.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "data/join.rs"

[features]
default = ['dng']
# This is a developer feature, it enabled deep inspection of algorithm execution stages
clap = ["dep:clap"]
inspector = []
samplecheck = []
analyze = []
dng-writer = []

packed = []
ljpeg = []
ljpeg92 = []
ari = []
arw = []
bmff = []
ciff = []
jfif = []
crx = []
cr2 = ['crx']
cr3 = ['crx']
crw = []
dcr  = []
dcs = []
dng = ['ljpeg']
erf = []
iiq = []
kdc = []
mef = []
mos = []
mrw = []
nef = []
nkd = []
nrw = []
orf = []
pef = []
qtk = []
raf = []
rw2 = []
srw = []
tfr = []
x3f = []
radc = []

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
bitstream-io = "2"
byteorder = "1"
chrono = "0.4"
clap = {version = "4.4.0", optional = true}
enumn = "0.1"
futures = "0.3"
hex = "0.4"
image = {version = "0.25", default-features = false}
itertools = "0.13"
lazy_static = "1"
libc = "0.2"
libflate = "2.0"
log = "0.4"
md5 = "0.7"
multiversion = "0.8"
num_enum = "0.7"
rayon = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.20", features = ["full"], optional = true}
toml = "0.8"
uuid = {version = "1.0", features = ["serde", "v4"]}
weezl = "0.1.7"
memmap2 = "0.9.4"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
env_logger = "0.11"
serde_yaml = "0.8"

[build-dependencies]
glob = "0.3"
rustc_version = "0.4"
toml = "0.8"

[[bench]]
harness = false
name = "perf"
